# RAGnostic

./: .gitignore  README.md
src/: .env.example  chat.py  chatbot.py  input.py  pipeline.py  pyproject.toml
